<resources>
    <string name="app_name">Detect Resolution</string>
    <string name="rendering_resolution">Display Resolution</string>
    <string name="demensions_in_dp">UI Dimensions (dp)</string>
    <string name="density_in_dpi">Scale Factor</string>
    <string name="written_by_frank_from_frankseptillion_com">written by Frank from frankseptillion.com</string>
    <string name="supports_hdr">HDR Display</string>
    <string name="model">Device Name</string>
    <string name="FontWeight">Font Weight</string>
    <string name="weight100">G</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="notSupported">Not Supported</string>
    <string name="wide_color_gamut">Wide Color Gamut</string>
    <string name="supported">Supported</string>
    <string name="memorystatus">MemoryStatus</string>
</resources>
